<resources>
    <string name="app_name">GrowthVisualization</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="icon_timeline">Time Line</string>
    <string name="icon_chart">Chart</string>
    <string name="icon_menu">Menu</string>
    <string name="icon_checkbox">終日</string>
    <string name="icon_calendar">日付</string>
    <string name="icon_save">保存</string>
    <string name="icon_symbol">シンボル</string>
    <string name="icon_title">タイトルを入力して下さい</string>
    <string name="icon_text">内容を入力して下さい</string>
</resources>