<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.growthvisualization.MainActivity">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_timeline"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="@string/icon_timeline"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_chart"
        android:icon="@drawable/ic_launcher_background"
        android:title="@string/icon_chart"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_menu"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/icon_menu"
        app:showAsAction="ifRoom" />
</menu>